--- a/.github/workflows/static.yml
+++ b/.github/workflows/static.yml
@@ -36,16 +36,20 @@ jobs:
         env:
           IMAGE_BASE_URL: ${{ secrets.IMAGE_BASE_URL }}
         run: |
-          # Replace the placeholder with the actual secret value
-          sed -i "s|{{IMAGE_BASE_URL}}|$IMAGE_BASE_URL|g" index.html
+          # Replace the placeholder with the actual secret value in items.html
+          sed -i "s|{{IMAGE_BASE_URL}}|$IMAGE_BASE_URL|g" items.html
+          
+          # Also create index.html as a copy of items.html for proper GitHub Pages routing
+          cp items.html index.html
           
           # Verify the replacement was successful
           echo "✅ Configuration updated successfully"
           echo "🔒 IMAGE_BASE_URL has been configured from secrets"
           
           # Show confirmation without revealing the actual URL
-          if grep -q "$IMAGE_BASE_URL" index.html; then
-            echo "✅ Secret IMAGE_BASE_URL successfully injected into index.html"
+          if grep -q "$IMAGE_BASE_URL" items.html && grep -q "$IMAGE_BASE_URL" index.html; then
+            echo "✅ Secret IMAGE_BASE_URL successfully injected into both files"
+            echo "📄 Created index.html from items.html for proper routing"
           else
             echo "❌ Failed to inject IMAGE_BASE_URL"
             exit 1
@@ -59,10 +63,13 @@ jobs:
         with:
           # Upload entire repository
           path: '.'
+          name: github-pages-${{ github.run_id }}-${{ github.run_attempt }}
           
       - name: Deploy to GitHub Pages
         id: deployment
         uses: actions/deploy-pages@v4
+        with:
+          artifact_name: github-pages-${{ github.run_id }}-${{ github.run_attempt }}
         
       - name: Deployment Summary
         run: |
@@ -70,3 +77,4 @@ jobs:
           echo "📍 Site URL: ${{ steps.deployment.outputs.page_url }}"
           echo "🔒 Image URLs are securely configured from secrets"
           echo "✨ Free Fire Arsenal database is live!"
+          echo "📄 Both items.html and index.html are available"
