--- a/.github/workflows/static.yml
+++ b/.github/workflows/static.yml
@@ -36,20 +36,20 @@ jobs:
         env:
           IMAGE_BASE_URL: ${{ secrets.IMAGE_BASE_URL }}
         run: |
-          # Replace the placeholder with the actual secret value in items.html
-          sed -i "s|{{IMAGE_BASE_URL}}|$IMAGE_BASE_URL|g" items.html
+          # Replace the placeholder with the actual secret value in index.html
+          sed -i "s|{{IMAGE_BASE_URL}}|$IMAGE_BASE_URL|g" index.html
           
-          # Also create index.html as a copy of items.html for proper GitHub Pages routing
-          cp items.html index.html
+          # Also create index.html as a copy of index.html for proper GitHub Pages routing
+          cp index.html index.html
           
           # Verify the replacement was successful
           echo "✅ Configuration updated successfully"
           echo "🔒 IMAGE_BASE_URL has been configured from secrets"
           
           # Show confirmation without revealing the actual URL
-          if grep -q "$IMAGE_BASE_URL" items.html && grep -q "$IMAGE_BASE_URL" index.html; then
+          if grep -q "$IMAGE_BASE_URL" index.html && grep -q "$IMAGE_BASE_URL" index.html; then
             echo "✅ Secret IMAGE_BASE_URL successfully injected into both files"
-            echo "📄 Created index.html from items.html for proper routing"
+            echo "📄 Created index.html from index.html for proper routing"
           else
             echo "❌ Failed to inject IMAGE_BASE_URL"
             exit 1
